Review Request 10084 - fixed playbook wizard content not showing up after jon's checkin - added visible warnings for validation in playbook when skipping steps

--- a/le-ui/projects/common/components/wizard/progress/progress.component.scss
+++ b/le-ui/projects/common/components/wizard/progress/progress.component.scss
@@ -45,8 +45,22 @@
             transform: translateY(-50%);
             transition: none;
         }
-    }
 
+        span.import-wizard-progress-validation {
+            color: red;
+            font-size: 9pt;
+            float: left;
+            display: block;
+            width: 100%;
+            font-weight: normal;
+            position: absolute;
+            margin-top: -0.3em;
+            opacity: 0;           
+            &.invalid {
+                opacity: 1;
+            }
+        }
+    }
     li.previous {
         cursor: default;
         
